--- a/src/css/components/Message.scss
+++ b/src/css/components/Message.scss
@@ -31,6 +31,14 @@
     border-bottom-left-radius: 0px;
   }
 
+  li.image {
+    content: '';
+    display: block;
+    padding-top: 45%;
+    min-width: 45%;
+    background-size: cover;
+  }
+
   li.info {
     min-width: 100px;
     margin: 0 auto;
