Check for updates on start

--- a/src/css/index.scss
+++ b/src/css/index.scss
@@ -6,3 +6,4 @@
 @import 'components/ConnectionSettings';
 @import 'components/Conversation';
 @import 'components/Message';
+@import 'components/UpdateMessage';
