--- a/src/css/components/Message.scss
+++ b/src/css/components/Message.scss
@@ -7,6 +7,8 @@
     max-width: 60%;
     border-radius: 10px;
     display:block;
+    white-space: pre-wrap;
+    word-break: break-word;
   }
 
   li.clearfix {
